# MAS

./: .gitignore  .impeccable.md  requirements.txt
mas_backbone/: README.md  STUDENT_GUIDE.md  __init__.py  pyproject.toml
mas_backbone/adapters/: __init__.py  event_api.py  langchain_callback.py
mas_backbone/analysis/: __init__.py  trace_summary.py
mas_backbone/models/: __init__.py  execution_record.py  prompt_artifact.py  trace_event.py
mas_backbone/scripts/: generate_dummy_run.py
mas_backbone/tests/: test_integration.py  test_invariants.py  test_langchain.py  test_models.py
mas_backbone/utils/: __init__.py
tracee/: ARCHITECTURE.md  PLAYGROUND_BRIEF.md  __init__.py  cli.py  main.py  package-lock.json  pyproject.toml
tracee/backbone/: ARCHITECTURE.md  README.md  __init__.py  pyproject.toml  tracer.py
tracee/backbone/adapters/: __init__.py  event_api.py  langchain_callback.py  sinks.py
tracee/backbone/analysis/: __init__.py  agent_analyzer.py  analyze_trace.py  trace_summary.py
tracee/backbone/models/: __init__.py  agent_registry.py  cognition.py  execution_record.py  graph_topology.py  playground_run.py  prompt_artifact.py  saved_model_config.py  trace_event.py
tracee/backbone/scripts/: __init__.py  generate_dummy_run.py
tracee/backbone/sdk/: __init__.py  graph_extractor.py  instrument.py  prompt_loader.py  tracing.py
tracee/backbone/tests/: __init__.py  test_agent_routes.py  test_cli.py  test_instrument.py  test_integration.py  test_invariants.py  test_langchain.py  test_models.py  test_output_schema.py  test_playground_execution.py  test_sample_mas.py
tracee/backbone/tests/fixtures/: sample_contract.json
tracee/backbone/utils/: __init__.py  identifiers.py
tracee/playground-ui/: .gitignore  FRONTEND.md  design-sheet.html  index.html  package-lock.json  package.json
tracee/playground-ui/src/: App.tsx  design-system.css  index.css  main.tsx  vite-env.d.ts
tracee/playground-ui/src/api/: agents.ts  cognition.ts  graphs.ts  playground.ts  prompts.ts  traces.test.ts  traces.ts
tracee/playground-ui/src/components/: AppShell.tsx  CognitionText.tsx  CreateRun.tsx  (+12 more)
tracee/sample_mas/: .gitignore  ARCHITECTURE.md  README.md  main.py  seed_prompts.py  start_server.sh  test_system.py
tracee/sample_mas/backend/: main.py
tracee/sample_mas/frontend/: index.html
tracee/server/: README.md  __init__.py  agent_db.py  agent_routes.py  app.py  cognition_db.py  cognition_service.py  db.py  graph_db.py  graph_routes.py  guided_start_routes.py  guided_start_service.py  llm_clients.py  model_config_routes.py  playground_db.py  playground_routes.py  prompt_db.py  prompt_routes.py  routes.py  trace_db.py  trace_routes.py
tracee/server/data/: tracee.db
tracee/tracee/: __init__.py  cli.py
(+208 files in other folders)
