[project]
name = "mas-backbone"
version = "0.1.0"
description = "Semantic backbone for MAS research prototype - multi-agent system tracing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "langchain-core>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.hatch.build]
packages = ["mas_backbone"]

[tool.hatch.metadata]
allow-direct-references = true
